--- a/src/styles/PopularResources.module.css
+++ b/src/styles/PopularResources.module.css
@@ -1,7 +1,7 @@
 .PopContainer {
     background-color: white;
     border-radius: 10px;
-    padding: 10px 10px 0 10px;
+    padding: 10px 10px 1px 10px;
     margin-top: 10px;
 }
 
